data/derived/comb/progs/unify/prog6199.ml.out
Characters 233-245:
  | h::t -> ((sum/10)::a1,(sum mod 10)::a2) in
             ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
